--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-plugin-try-catch-failsafe",
   "version": "0.1.0",
-  "description": "Make sure to use try-catch to wrap some dangerous actions!",
+  "description": "Make sure to use try-catch to wrap up some dangerous actions!",
   "main": "lib/index.js",
   "scripts": {
     "build": "rm -rf lib && swc src -d lib",
